2010-03-04  Donal K. Fellows  <dkf@users.sf.net>

	* doc/clipboard.n: Added note about STRING vs. UTF8_STRING types.

2010-02-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (TextEditCmd): [Bug 1799782]: Refix this, so that
        <<Modified>> events are issued when things change.

2010-02-19  Donal K. Fellows  <dkf@users.sf.net>

	* unix/installManPage: [Tcl Bug 2954638]: Correct behaviour of manual
	page installer. Also added armouring to check that assumptions about
	the initial state are actually valid (e.g., look for existing input
	file).

2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>

	* tcl.m4: Correct compiler/linker flags
	for threaded builds on OpenBSD.
	* configure: (regenerated).

2010-02-17  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkMenu.c: [Bug 2952745]: Defer TkMenuOptionTables cleanup to
	CallWhenDeleted() time, to ensure that the record doesn't get freed
	until after all widget instance commands have been deleted.

2010-02-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tkUnixWm.c       make TkSetTransientFor static

2010-02-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl Backport various formatting (spacing)
	* generic/ttk/ttk.decls       changes from HEAD, so diffing
	* generic/ttk/ttkDecls.h      between 8.5.x and 8.6 shows the
	* generic/tk*.decls           real structural differences again.
	* generic/tk*Decls.h          (any signature change not backported!)

2010-01-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkBind.c      Fix various gcc-4.4 warnings, all
	* generic/tkListbox.c   backported from HEAD.
	* generic/tkText.c
	* generic/ttk/ttkInit.c

2010-01-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/bgerror.tcl:  [TIP 359]: Extended Window Manager Hints
	* library/clrpick.tcl:  following the freedesktop.org specification
	* library/demos/widget: are now supported on X11 using a new
	* library/dialog.tcl:   wm attribute called '-type'